# lab2

./: .gitignore  CMakeLists.txt  README.md
src/: integration.cpp  pi.cpp  quicksort.cpp  stdref.cpp
